--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    
   </div>
 
-  <button type="button" class="load-more hidden">Load more</button>
+  <!-- <button type="button" class="load-more hidden">Load more</button> -->
 
  
   <script src="/js/app.js" type="module"></script>
