--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- <button type="button" class="load-more hidden">Load more</button> -->
 
  
-  <script src="/js/app.js" type="module"></script>
+  <script src="./js/app.js" type="module"></script>
   
 </body>
 </html>
